        **************************************************
        *                                                *
        *              2.7 SERIES NEWS                   *
        *                                                *
        **************************************************

SIGNIFICANT USER-VISIBLE CHANGES

    o Constructors for classes EntrezIdentifier, EnzymeIdentifier,
    GenenameIdentifier, RefseqIdentifier, SymbolIdentifier,
    UnigeneIdentifier can now accept an 'annotation' argument. This is
    used to indicate which annotation package the identifiers are
    from, e.g., EntrezIdentifier("hgu95av2.db") indicates that the
    EntrezId's are from the hgu95av2.db package.

    o GOCollection now tracks ontology as well as evidenceCode

    o Add ComputedCollection class to describe gene set collections
    resulting from computations.

    o Additional GeneSetCollection constructors

    o Add OBOCollection class for reading OBO gene sets, including
    functions to retrieve OBO collections from the internet
    (getOBOCollectoin) and convert OBOCollections to and from graphNEL
    objects.

NEW FEATURES

    o geneIdType<- and mapIdentifiers can now map between any two
    identifier types within an annotation package, e.g.,
    SymbolIdentifer('org.Hs.eg.db') to
    GenenameIdentifier('org.Hs.eg.db')

    o Parse revised Broad gene sets.

    o More extensive information in some 'show' methods

    o Added a mapIdentifiers method to allow maps with user-supplied
    AnnDbBimap objects

BUG FIXES

    o A GeneSetCollection constructed with a named list could
    incorrectly propagate the set names.

    o Export MapCollection class

    o Mapping AnnotationIdentifer to AnnotationIdentifier failed due
    to incorrect method selection

(start date: 9 February, 2008)